# pdf-compressor-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release-build.yml
scripts/: embed-ghostscript.mjs
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
