[package]
name = "pdf-compress-gui"
version = "0.1.0"
description = "Cross-platform PDF compressor GUI"
authors = ["moon.huang"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
